--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,23 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.toggle-button {
+  padding: 6px 12px;
+  background-color: rgba(255, 255, 255, 0.18);
+  color: white;
+  border: none;
+  border-radius: 99px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: all 0.3s;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  font-family: 'Necto-Mono', monospace;
+  transform: translateX(-50%);
+}
+
+.toggle-button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: black;
+  transform: translateX(-50%) scale(1.05);
+}
