--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,16 @@ body {
   color: white;
   border: none;
   border-radius: 99px;
-  font-size: 12px;
+  font-size: 10px;
   cursor: pointer;
   transition: all 0.3s;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   font-family: 'Necto-Mono', monospace;
-  transform: translateX(-50%);
+  letter-spacing: 0.05em;
 }
 
 .toggle-button:hover {
   background-color: rgba(255, 255, 255, 0.8);
   color: black;
-  transform: translateX(-50%) scale(1.05);
+  transform: scale(1.05);
 }
