--- a/src/App.css
+++ b/src/App.css
@@ -19,16 +19,16 @@ body {
 
 .toggle-button {
   padding: 6px 12px;
-  background-color: rgba(255, 255, 255, 0.18);
-  color: white;
+  background-color: rgba(255, 255, 255, 0.15);
+  color: rgba(255, 255, 255, 0.75);
   border: none;
-  border-radius: 99px;
-  font-size: 10px;
+  border-radius: 8px;
+  font-family: inherit;
+  font-size: 0.875rem;
+  letter-spacing: -0.05rem;
   cursor: pointer;
-  transition: all 0.3s;
+  transition: all 0.8s;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  font-family: 'Necto-Mono', monospace;
-  letter-spacing: 0.05em;
 }
 
 .toggle-button:hover {
